--- a/app/views/blogsignups/_blogShareSignups.html.erb
+++ b/app/views/blogsignups/_blogShareSignups.html.erb
@@ -12,7 +12,7 @@
 		<a class="addthis_button_reddit" style="width: %; margin-right: 40px; padding-bottom: 20px;"></a>
 		<a class="addthis_button_digg" style="width: %; margin-right: 40px; padding-bottom: 20px;"></a>
 		<a class="addthis_button_email" style="width: %; margin-right: 40px; padding-bottom: 20px;"></a>
-		<a href="http://on.fb.me/KCMm1Z" target="_blank"><img class="shareLinks" src="https://s3.amazonaws.com/AdviceShare/Social+Media+Icons/Facebook+Icon.png"></a>
+		<!--<a href="http://on.fb.me/KCMm1Z" target="_blank"><img class="shareLinks" src="https://s3.amazonaws.com/AdviceShare/Social+Media+Icons/Facebook+Icon.png"></a>-->
 		
 		
 		
