--- a/app/views/blogsignups/_blogShareSignups.html.erb
+++ b/app/views/blogsignups/_blogShareSignups.html.erb
@@ -7,7 +7,7 @@
 		addthis:description="DOES IT ACTUALLY POST THIS?">
 		
 		<a class="addthis_button_twitter" style="width: %; margin-right: 40px; padding-bottom: 20px;"></a>
-		<a class="addthis_button_facebook" style="width: %; margin-right: 40px; padding-bottom: 20px;"></a>-->
+		<a class="addthis_button_facebook" style="width: %; margin-right: 40px; padding-bottom: 20px;"></a>
 		<a class="addthis_button_linkedin" style="width: %; margin-right: 40px; padding-bottom: 20px;"></a>
 		<a class="addthis_button_reddit" style="width: %; margin-right: 40px; padding-bottom: 20px;"></a>
 		<a class="addthis_button_digg" style="width: %; margin-right: 40px; padding-bottom: 20px;"></a>
